--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -967,16 +966,13 @@ input:focus, select:focus, textarea:focus {
   .tab-btn { padding: 8px 14px; font-size: 0.8rem; }
 }
 </style>
-
 </head>
 <body class="theme-fun">
 
 <!-- Ambient background -->
-
 <canvas id="ambient-canvas"></canvas>
 
 <!-- Top Navigation Bar -->
-
 <nav class="topbar" id="topbar">
   <span class="topbar-logo">🎓 LearnBase</span>
   <div class="topbar-right">
@@ -994,13 +990,11 @@ input:focus, select:focus, textarea:focus {
 </nav>
 
 <!-- Game exit button -->
-
 <button class="game-exit-btn" id="game-exit-btn" onclick="exitGame()">← Back</button>
 
 <!-- ============================================================
      SCREEN 1: LOGIN / PROFILE SELECT
      ============================================================ -->
-
 <div class="screen active" id="screen-login">
   <div class="login-hero stagger-1">
     <div class="display-title">LearnBase</div>
@@ -1028,14 +1022,12 @@ input:focus, select:focus, textarea:focus {
     </div>
   </div>
 
-<a class="admin-link stagger-4" onclick="showAdminLogin()">⚙️ Admin / Parent Access</a>
-
+  <a class="admin-link stagger-4" onclick="showAdminLogin()">⚙️ Admin / Parent Access</a>
 </div>
 
 <!-- ============================================================
      SCREEN 2: USER DASHBOARD
      ============================================================ -->
-
 <div class="screen" id="screen-dashboard">
   <div class="dashboard-wrap">
     <div class="welcome-banner stagger-1">
@@ -1063,25 +1055,21 @@ input:focus, select:focus, textarea:focus {
       </div>
     </div>
 
-```
-<!-- Subject sections injected here -->
-<div id="subject-sections"></div>
+    <!-- Subject sections injected here -->
+    <div id="subject-sections"></div>
 
-<!-- Empty state -->
-<div id="empty-state" style="display:none; text-align:center; padding: 60px 20px;">
-  <div style="font-size: 4rem; margin-bottom: 16px;">📭</div>
-  <div class="section-title" style="margin-bottom: 8px;">No games yet!</div>
-  <p style="color: var(--text-muted); font-size: 0.95rem;">Ask a parent to add games from the Admin panel.</p>
-</div>
-```
-
+    <!-- Empty state -->
+    <div id="empty-state" style="display:none; text-align:center; padding: 60px 20px;">
+      <div style="font-size: 4rem; margin-bottom: 16px;">📭</div>
+      <div class="section-title" style="margin-bottom: 8px;">No games yet!</div>
+      <p style="color: var(--text-muted); font-size: 0.95rem;">Ask a parent to add games from the Admin panel.</p>
+    </div>
   </div>
 </div>
 
 <!-- ============================================================
      SCREEN 3: ADMIN PANEL
      ============================================================ -->
-
 <div class="screen" id="screen-admin">
   <div class="admin-wrap">
     <div class="admin-header stagger-1">
@@ -1096,123 +1084,121 @@ input:focus, select:focus, textarea:focus {
       </div>
     </div>
 
-```
-<!-- Tabs -->
-<div class="admin-tabs stagger-2" style="margin-bottom: 28px;">
-  <button class="tab-btn active" onclick="switchAdminTab('overview')">📊 Overview</button>
-  <button class="tab-btn" onclick="switchAdminTab('library')">📚 Library</button>
-  <button class="tab-btn" onclick="switchAdminTab('add')">➕ Add Content</button>
-  <button class="tab-btn" onclick="switchAdminTab('progress')">📈 Progress</button>
-</div>
+    <!-- Tabs -->
+    <div class="admin-tabs stagger-2" style="margin-bottom: 28px;">
+      <button class="tab-btn active" onclick="switchAdminTab('overview')">📊 Overview</button>
+      <button class="tab-btn" onclick="switchAdminTab('library')">📚 Library</button>
+      <button class="tab-btn" onclick="switchAdminTab('add')">➕ Add Content</button>
+      <button class="tab-btn" onclick="switchAdminTab('progress')">📈 Progress</button>
+    </div>
 
-<!-- TAB: Overview -->
-<div class="tab-content active stagger-3" id="tab-overview">
-  <div class="stats-grid">
-    <div class="stat-card">
-      <div class="stat-value" id="stat-total-games">0</div>
-      <div class="stat-label">Total Games</div>
-    </div>
-    <div class="stat-card">
-      <div class="stat-value" id="stat-published">0</div>
-      <div class="stat-label">Published</div>
-    </div>
-    <div class="stat-card">
-      <div class="stat-value" id="stat-drafts">0</div>
-      <div class="stat-label">Drafts</div>
-    </div>
-    <div class="stat-card">
-      <div class="stat-value" id="stat-subjects">5</div>
-      <div class="stat-label">Subjects</div>
-    </div>
-  </div>
-
-  <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; flex-wrap: wrap;">
-    <div class="card" style="cursor:pointer" onclick="selectUser('corbin'); showDash()">
-      <div style="font-size:2rem; margin-bottom:8px;">🚀</div>
-      <div class="section-title">Corbin's Dashboard</div>
-      <p style="color:var(--text-muted); font-size:0.85rem; margin-top:6px;" id="corbin-overview-stats">Loading...</p>
-    </div>
-    <div class="card" style="cursor:pointer" onclick="selectUser('charlotte'); showDash()">
-      <div style="font-size:2rem; margin-bottom:8px;">🌟</div>
-      <div class="section-title">Charlotte's Dashboard</div>
-      <p style="color:var(--text-muted); font-size:0.85rem; margin-top:6px;" id="charlotte-overview-stats">Loading...</p>
-    </div>
-  </div>
-</div>
-
-<!-- TAB: Library -->
-<div class="tab-content" id="tab-library">
-  <div style="display:flex; align-items:center; justify-content:space-between; margin-bottom:16px; flex-wrap:wrap; gap:12px;">
-    <div class="section-title">Content Library</div>
-    <div style="display:flex; gap:8px; align-items:center;">
-      <select id="library-filter" onchange="renderLibrary()" style="padding:8px 14px; font-size:0.85rem; border-radius:var(--radius-xl);">
-        <option value="all">All Subjects</option>
-        <option value="math">🔢 Math</option>
-        <option value="reading">📖 Reading</option>
-        <option value="science">🔬 Science</option>
-        <option value="history">🌍 History</option>
-        <option value="spelling">🔤 Spelling</option>
-      </select>
-    </div>
-  </div>
-  <div class="library-grid" id="library-grid">
-    <!-- Populated by JS -->
-  </div>
-</div>
-
-<!-- TAB: Add Content -->
-<div class="tab-content" id="tab-add">
-  <div class="section-title" style="margin-bottom: 20px;">Add New Content</div>
-  <div class="add-game-form">
-    <div class="input-group">
-      <label>Game / Activity Name</label>
-      <input type="text" id="new-game-name" placeholder="e.g. Multiplication Master">
-    </div>
-    <div class="form-row">
-      <div class="input-group">
-        <label>Subject</label>
-        <select id="new-game-subject">
-          <option value="math">🔢 Math</option>
-          <option value="reading">📖 Reading</option>
-          <option value="science">🔬 Science</option>
-          <option value="history">🌍 History</option>
-          <option value="spelling">🔤 Spelling</option>
-        </select>
+    <!-- TAB: Overview -->
+    <div class="tab-content active stagger-3" id="tab-overview">
+      <div class="stats-grid">
+        <div class="stat-card">
+          <div class="stat-value" id="stat-total-games">0</div>
+          <div class="stat-label">Total Games</div>
+        </div>
+        <div class="stat-card">
+          <div class="stat-value" id="stat-published">0</div>
+          <div class="stat-label">Published</div>
+        </div>
+        <div class="stat-card">
+          <div class="stat-value" id="stat-drafts">0</div>
+          <div class="stat-label">Drafts</div>
+        </div>
+        <div class="stat-card">
+          <div class="stat-value" id="stat-subjects">5</div>
+          <div class="stat-label">Subjects</div>
+        </div>
       </div>
-      <div class="input-group">
-        <label>Emoji Icon</label>
-        <input type="text" id="new-game-emoji" placeholder="🎮" maxlength="2" value="🎮">
+
+      <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; flex-wrap: wrap;">
+        <div class="card" style="cursor:pointer" onclick="selectUser('corbin'); showDash()">
+          <div style="font-size:2rem; margin-bottom:8px;">🚀</div>
+          <div class="section-title">Corbin's Dashboard</div>
+          <p style="color:var(--text-muted); font-size:0.85rem; margin-top:6px;" id="corbin-overview-stats">Loading...</p>
+        </div>
+        <div class="card" style="cursor:pointer" onclick="selectUser('charlotte'); showDash()">
+          <div style="font-size:2rem; margin-bottom:8px;">🌟</div>
+          <div class="section-title">Charlotte's Dashboard</div>
+          <p style="color:var(--text-muted); font-size:0.85rem; margin-top:6px;" id="charlotte-overview-stats">Loading...</p>
+        </div>
       </div>
     </div>
-    <div class="input-group">
-      <label>Description</label>
-      <input type="text" id="new-game-desc" placeholder="Short description of this activity">
-    </div>
-    <div class="input-group">
-      <label>Game File (filename in /games/ folder)</label>
-      <input type="text" id="new-game-file" placeholder="e.g. games/math-multiplication.html">
-    </div>
-    <div class="input-group">
-      <label>Assign To</label>
-      <div style="display:flex; gap:20px; margin-top:4px;">
-        <label class="assign-check"><input type="checkbox" id="assign-corbin" checked> 🚀 Corbin</label>
-        <label class="assign-check"><input type="checkbox" id="assign-charlotte" checked> 🌟 Charlotte</label>
+
+    <!-- TAB: Library -->
+    <div class="tab-content" id="tab-library">
+      <div style="display:flex; align-items:center; justify-content:space-between; margin-bottom:16px; flex-wrap:wrap; gap:12px;">
+        <div class="section-title">Content Library</div>
+        <div style="display:flex; gap:8px; align-items:center;">
+          <select id="library-filter" onchange="renderLibrary()" style="padding:8px 14px; font-size:0.85rem; border-radius:var(--radius-xl);">
+            <option value="all">All Subjects</option>
+            <option value="math">🔢 Math</option>
+            <option value="reading">📖 Reading</option>
+            <option value="science">🔬 Science</option>
+            <option value="history">🌍 History</option>
+            <option value="spelling">🔤 Spelling</option>
+          </select>
+        </div>
+      </div>
+      <div class="library-grid" id="library-grid">
+        <!-- Populated by JS -->
       </div>
     </div>
-    <div style="display:flex; gap:12px; flex-wrap:wrap;">
-      <button class="btn btn-ghost" onclick="saveAsDraft()">💾 Save as Draft</button>
-      <button class="btn btn-primary" onclick="publishGame()">🚀 Publish Now</button>
-    </div>
-  </div>
-</div>
 
-<!-- TAB: Progress -->
-<div class="tab-content" id="tab-progress">
-  <div id="progress-panels">
-    <!-- Populated by JS -->
-  </div>
-</div>
-```
+    <!-- TAB: Add Content -->
+    <div class="tab-content" id="tab-add">
+      <div class="section-title" style="margin-bottom: 20px;">Add New Content</div>
+      <div class="add-game-form">
+        <div class="input-group">
+          <label>Game / Activity Name</label>
+          <input type="text" id="new-game-name" placeholder="e.g. Multiplication Master">
+        </div>
+        <div class="form-row">
+          <div class="input-group">
+            <label>Subject</label>
+            <select id="new-game-subject">
+              <option value="math">🔢 Math</option>
+              <option value="reading">📖 Reading</option>
+              <option value="science">🔬 Science</option>
+              <option value="history">🌍 History</option>
+              <option value="spelling">🔤 Spelling</option>
+            </select>
+          </div>
+          <div class="input-group">
+            <label>Emoji Icon</label>
+            <input type="text" id="new-game-emoji" placeholder="🎮" maxlength="2" value="🎮">
+          </div>
+        </div>
+        <div class="input-group">
+          <label>Description</label>
+          <input type="text" id="new-game-desc" placeholder="Short description of this activity">
+        </div>
+        <div class="input-group">
+          <label>Game File (filename in root folder)</label>
+          <input type="text" id="new-game-file" placeholder="e.g. math-multiplication.html">
+        </div>
+        <div class="input-group">
+          <label>Assign To</label>
+          <div style="display:flex; gap:20px; margin-top:4px;">
+            <label class="assign-check"><input type="checkbox" id="assign-corbin" checked> 🚀 Corbin</label>
+            <label class="assign-check"><input type="checkbox" id="assign-charlotte" checked> 🌟 Charlotte</label>
+          </div>
+        </div>
+        <div style="display:flex; gap:12px; flex-wrap:wrap;">
+          <button class="btn btn-ghost" onclick="saveAsDraft()">💾 Save as Draft</button>
+          <button class="btn btn-primary" onclick="publishGame()">🚀 Publish Now</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- TAB: Progress -->
+    <div class="tab-content" id="tab-progress">
+      <div id="progress-panels">
+        <!-- Populated by JS -->
+      </div>
+    </div>
 
   </div>
 </div>
@@ -1220,7 +1206,6 @@ input:focus, select:focus, textarea:focus {
 <!-- ============================================================
      SCREEN 4: GAME IFRAME
      ============================================================ -->
-
 <div class="screen game-frame-screen" id="screen-game">
   <iframe id="game-iframe" src="" allowfullscreen></iframe>
 </div>
@@ -1230,7 +1215,6 @@ input:focus, select:focus, textarea:focus {
      ============================================================ -->
 
 <!-- Admin Login -->
-
 <div class="modal-overlay" id="modal-admin-login">
   <div class="modal">
     <div class="modal-title">⚙️ Admin Access</div>
@@ -1248,7 +1232,6 @@ input:focus, select:focus, textarea:focus {
 </div>
 
 <!-- Test game preview modal -->
-
 <div class="modal-overlay" id="modal-test">
   <div class="modal">
     <div class="modal-title">🧪 Test Mode</div>
@@ -1262,13 +1245,11 @@ input:focus, select:focus, textarea:focus {
 </div>
 
 <!-- Toast -->
-
 <div id="toast">✅ Done!</div>
 
 <!-- ============================================================
      JAVASCRIPT
      ============================================================ -->
-
 <script>
 // ============================================================
 // DATA STORE — uses localStorage for persistence
@@ -1318,7 +1299,7 @@ function initData() {
         subject: 'math',
         emoji: '🔢',
         desc: 'Times tables 1–10 with mini-game rewards',
-        file: 'games/math-multiplication.html',
+        file: 'math-multiplication.html',
         status: 'published',
         assignedTo: ['corbin', 'charlotte'],
         addedDate: new Date().toISOString()
@@ -1893,6 +1874,5 @@ function boot() {
 
 boot();
 </script>
-
 </body>
 </html>
