--- a/math-multiplication.html
+++ b/math-multiplication.html
@@ -1,3 +1,60 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>EagleLearn – Multiply & Divide</title>
+
+<style>
+body{
+    font-family: Arial, sans-serif;
+    margin:0;
+    background:linear-gradient(135deg,#0b1f3a,#1f3b73,#b8860b);
+    color:#fff;
+    text-align:center;
+}
+.screen{
+    padding:30px;
+}
+.hidden{display:none;}
+button{
+    padding:15px 25px;
+    margin:10px;
+    font-size:18px;
+    border:none;
+    border-radius:10px;
+    cursor:pointer;
+}
+.modeBtn{background:#b8860b;color:#000;}
+.levelBtn{background:#1f3b73;color:#fff;}
+.correct{color:lime;}
+.incorrect{color:red;}
+</style>
+</head>
+
+<body>
+
+<div class="screen" id="menuScreen">
+<h1>🦅 EagleLearn</h1>
+<h2>Choose Mode</h2>
+
+<button class="modeBtn" onclick="setMode('multiply')">✖ Multiply</button>
+<button class="modeBtn" onclick="setMode('divide')">➗ Divide</button>
+
+<h2>Select Level (1-10)</h2>
+<div id="levels"></div>
+</div>
+
+<div class="screen hidden" id="gameScreen">
+<h2 id="modeTitle"></h2>
+<h3 id="question"></h3>
+<input type="number" id="answer" />
+<br><br>
+<button onclick="submitAnswer()">Submit</button>
+<p id="feedback"></p>
+<button onclick="backToMenu()">Back</button>
+</div>
+
 <script>
 
 let currentMode = "multiply";
@@ -136,3 +193,6 @@ loadProgress();
 displayMedals();
 
 </script>
+    
+</body>
+</html>
