--- a/math-multiplication.html
+++ b/math-multiplication.html
@@ -47,6 +47,7 @@ button{
 
 <div class="screen hidden" id="gameScreen">
 <h2 id="modeTitle"></h2>
+    <div id="medals" style="font-size:28px; margin-bottom:15px;"></div>
 <h3 id="question"></h3>
 <input type="number" id="answer" />
 <br><br>
