Refactor add function to accept parameters

--- a/index.html
+++ b/index.html
@@ -622,6 +622,11 @@ input:focus, select:focus, textarea:focus {
   z-index: 1;
 }
 
+<button onclick="clearAppCache()" 
+style="padding:15px 25px; font-size:18px; border-radius:10px; background:#b8860b; border:none; margin-top:20px;">
+🧹 Clear App Cache
+</button>
+   
 .admin-header {
   display: flex;
   align-items: center;
@@ -1883,4 +1888,5 @@ boot();
 </script>
 </body>
 </html>
+
 
