--- a/index.html
+++ b/index.html
@@ -1260,21 +1260,31 @@ style="padding:15px 25px; font-size:18px; border-radius:10px; background:#b8860b
 // DATA STORE — uses localStorage for persistence
 // ============================================================
 
+async function clearAppCache() {
 
-
-   async function clearAppCache() {
-
-    const confirmClear = confirm("This will clear app cache and saved data. Continue?");
+    const confirmClear = confirm("This will clear ALL app data and cache. Continue?");
     if (!confirmClear) return;
 
-    // Clear localStorage
     localStorage.clear();
 
-    // Clear Service Worker cache
     if ('caches' in window) {
         const keys = await caches.keys();
         await Promise.all(keys.map(key => caches.delete(key)));
     }
+
+    if ('serviceWorker' in navigator) {
+        const registrations = await navigator.serviceWorker.getRegistrations();
+        for (let reg of registrations) {
+            await reg.unregister();
+        }
+    }
+
+    alert("App fully reset. Reloading clean...");
+
+    window.location.reload();
+}
+
+   
 
     alert("Cache cleared successfully! Reloading...");
 
@@ -1909,6 +1919,7 @@ boot();
 </script>
 </body>
 </html>
+
 
 
 
