--- a/math-multiplication.html
+++ b/math-multiplication.html
@@ -12,11 +12,12 @@ body{
     background:linear-gradient(135deg,#0b1f3a,#1f3b73,#b8860b);
     color:#fff;
     text-align:center;
+    overflow-x:hidden;
 }
-.screen{
-    padding:30px;
-}
-.hidden{display:none;}
+
+.screen{ padding:30px; }
+.hidden{ display:none; }
+
 button{
     padding:15px 25px;
     margin:10px;
@@ -25,19 +26,61 @@ button{
     border-radius:10px;
     cursor:pointer;
 }
-.modeBtn{background:#b8860b;color:#000;}
-.levelBtn{background:#1f3b73;color:#fff;}
-.correct{color:lime;}
-.incorrect{color:red;}
+
+.modeBtn{ background:#b8860b;color:#000; }
+.levelBtn{ background:#1f3b73;color:#fff; }
+
+.correct{ color:lime; }
+.incorrect{ color:#ff8080; }
+
+.bubble-container{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    gap:20px;
+    margin-top:30px;
+    min-height:120px;
+}
+
+.answer-bubble{
+    width:90px;
+    height:90px;
+    border-radius:50%;
+    background:radial-gradient(circle,#b8860b,#8b6508);
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size:24px;
+    font-weight:bold;
+    cursor:pointer;
+    transition:0.3s;
+    animation:float 4s ease-in-out infinite;
+}
+
+.answer-bubble:hover{
+    transform:scale(1.15);
+}
+
+@keyframes float{
+    0%{transform:translateY(0px);}
+    50%{transform:translateY(-10px);}
+    100%{transform:translateY(0px);}
+}
+
+canvas{
+    background:#87ceeb;
+    border-radius:10px;
+}
 </style>
 </head>
 
 <body>
 
+<!-- MENU -->
 <div class="screen" id="menuScreen">
 <h1>🦅 EagleLearn</h1>
-<h2>Choose Mode</h2>
 
+<h2>Choose Mode</h2>
 <button class="modeBtn" onclick="setMode('multiply')">✖ Multiply</button>
 <button class="modeBtn" onclick="setMode('divide')">➗ Divide</button>
 
@@ -45,78 +88,77 @@ button{
 <div id="levels"></div>
 </div>
 
+<!-- GAME -->
 <div class="screen hidden" id="gameScreen">
 <h2 id="modeTitle"></h2>
-    <div id="medals" style="font-size:28px; margin-bottom:15px;"></div>
+<div id="medals" style="font-size:28px;margin-bottom:15px;"></div>
 <h3 id="question"></h3>
-<input type="number" id="answer" />
-<br><br>
-<button onclick="submitAnswer()">Submit</button>
+<div id="bubbleContainer" class="bubble-container"></div>
 <p id="feedback"></p>
 <button onclick="backToMenu()">Back</button>
 </div>
 
+<!-- MINI GAME -->
+<div class="screen hidden" id="miniGameScreen">
+<h2>🦅 Eagle Challenge!</h2>
+<canvas id="flappyCanvas" width="400" height="500"></canvas>
+</div>
+
 <script>
 
-let currentMode = "multiply";
-let currentLevel = 1;
+let currentMode="multiply";
+let currentLevel=1;
 let correctAnswer;
-let correctCount = 0;
-let medalsEarned = [];
+let correctCount=0;
+let medalsEarned=[];
+let combo=0;
+let bonusActive=false;
 
-const correctSound = new Audio("https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg");
-const funnyWrongSound = new Audio("https://actions.google.com/sounds/v1/cartoon/boing.ogg");
+const userKey="eagleLearnMedals";
 
-const userKey = "eagleLearnMedals";
+const correctSound=new Audio("https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg");
+const funnyWrongSound=new Audio("https://actions.google.com/sounds/v1/cartoon/boing.ogg");
+const flapSound=new Audio("https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg");
 
 function loadProgress(){
-    const saved = localStorage.getItem(userKey);
+    const saved=localStorage.getItem(userKey);
     if(saved){
-        const data = JSON.parse(saved);
-        correctCount = data.correctCount || 0;
-        medalsEarned = data.medalsEarned || [];
+        const data=JSON.parse(saved);
+        correctCount=data.correctCount||0;
+        medalsEarned=data.medalsEarned||[];
     }
 }
 
 function saveProgress(){
-    localStorage.setItem(userKey, JSON.stringify({
-        correctCount,
-        medalsEarned
-    }));
+    localStorage.setItem(userKey,JSON.stringify({correctCount,medalsEarned}));
 }
 
 function displayMedals(){
-    const medalDiv = document.getElementById("medals");
-    if(!medalDiv) return;
-
-    medalDiv.innerHTML = medalsEarned.join(" ");
+    document.getElementById("medals").innerHTML=medalsEarned.join(" ");
 }
 
 function checkMedals(){
-    const medalLevels = [
-        {count:5, icon:"🥉"},
-        {count:15, icon:"🥈"},
-        {count:30, icon:"🥇"},
-        {count:50, icon:"🦅"}
+    const medalLevels=[
+        {count:5,icon:"🥉"},
+        {count:15,icon:"🥈"},
+        {count:30,icon:"🥇"},
+        {count:50,icon:"🦅"}
     ];
 
     medalLevels.forEach(m=>{
-        if(correctCount >= m.count && !medalsEarned.includes(m.icon)){
+        if(correctCount===m.count){
             medalsEarned.push(m.icon);
-            alert("🏅 New Medal Earned! " + m.icon);
+            saveProgress();
+            displayMedals();
+            startMiniGame(m.count===50);
         }
     });
-
-    saveProgress();
-    displayMedals();
 }
 
-function setMode(mode){
-    currentMode = mode;
-}
+function setMode(mode){ currentMode=mode; }
 
 function buildLevels(){
-    const container = document.getElementById("levels");
+    const container=document.getElementById("levels");
     for(let i=1;i<=10;i++){
         const btn=document.createElement("button");
         btn.className="levelBtn";
@@ -128,13 +170,13 @@ function buildLevels(){
 buildLevels();
 
 function startGame(level){
-    currentLevel = level;
+    currentLevel=level;
     document.getElementById("menuScreen").classList.add("hidden");
     document.getElementById("gameScreen").classList.remove("hidden");
 
-    document.getElementById("modeTitle").textContent =
-        currentMode==="multiply" ?
-        "Multiplication - Level "+level :
+    document.getElementById("modeTitle").textContent=
+        currentMode==="multiply"?
+        "Multiplication - Level "+level:
         "Division - Level "+level;
 
     nextQuestion();
@@ -157,31 +199,58 @@ function nextQuestion(){
             num1+" ÷ "+num2+" = ?";
     }
 
-    document.getElementById("answer").value="";
+    generateAnswerBubbles();
     document.getElementById("feedback").textContent="";
 }
 
-function submitAnswer(){
-    const user=parseInt(document.getElementById("answer").value);
+function generateAnswerBubbles(){
+    const container=document.getElementById("bubbleContainer");
+    container.innerHTML="";
 
+    let answers=[correctAnswer];
+
+    while(answers.length<6){
+        let wrong=correctAnswer+Math.floor(Math.random()*12)-6;
+        if(wrong>0&&!answers.includes(wrong)){
+            answers.push(wrong);
+        }
+    }
+
+    answers.sort(()=>Math.random()-0.5);
+
+    answers.forEach(ans=>{
+        const bubble=document.createElement("div");
+        bubble.className="answer-bubble";
+        bubble.textContent=ans;
+        bubble.onclick=()=>checkAnswer(ans,bubble);
+        container.appendChild(bubble);
+    });
+}
+
+function checkAnswer(user,bubble){
     if(user===correctAnswer){
-        correctSound.currentTime = 0;
+        correctSound.currentTime=0;
         correctSound.play();
 
-        correctCount++;
+        combo++;
+        let points=bonusActive?2:1;
+        correctCount+=points;
+
+        bubble.style.transform="scale(1.5)";
+        bubble.style.opacity="0";
+
         checkMedals();
 
-        document.getElementById("feedback").textContent="🦅 Correct!";
-        document.getElementById("feedback").className="correct";
-
-        setTimeout(nextQuestion,1000);
-    }else{
-        funnyWrongSound.currentTime = 0;
-        funnyWrongSound.play();
-
         document.getElementById("feedback").textContent=
-            "😄 Oops! Answer: "+correctAnswer;
-        document.getElementById("feedback").className="incorrect";
+            "🦅 Correct! Combo x"+combo;
+
+        setTimeout(nextQuestion,900);
+
+    }else{
+        funnyWrongSound.currentTime=0;
+        funnyWrongSound.play();
+        combo=0;
+        document.getElementById("feedback").textContent="😄 Try again!";
     }
 }
 
@@ -190,10 +259,105 @@ function backToMenu(){
     document.getElementById("menuScreen").classList.remove("hidden");
 }
 
+/* ================= MINI GAME ================= */
+
+function startMiniGame(isBoss=false){
+
+    document.getElementById("gameScreen").classList.add("hidden");
+    document.getElementById("miniGameScreen").classList.remove("hidden");
+
+    const canvas=document.getElementById("flappyCanvas");
+    const ctx=canvas.getContext("2d");
+
+    let y=250, velocity=0, gravity=0.6;
+    let pipes=[], lives=3, score=0;
+    let cloudX=0;
+
+    let speed=isBoss?6:3+Math.floor(correctCount/10);
+    let gap=isBoss?90:170-Math.floor(correctCount/5);
+    if(gap<100) gap=100;
+
+    function spawnPipe(){
+        pipes.push({x:400,gap:gap,top:Math.random()*250+50,passed:false});
+    }
+
+    let pipeInterval=setInterval(spawnPipe,2000);
+
+    function flap(){
+        velocity=-9;
+        flapSound.currentTime=0;
+        flapSound.play();
+    }
+
+    document.addEventListener("click",flap);
+    document.addEventListener("touchstart",flap);
+
+    function loop(){
+        ctx.clearRect(0,0,400,500);
+
+        cloudX-=1;
+        ctx.fillStyle="white";
+        ctx.fillRect((cloudX%400),60,80,30);
+
+        velocity+=gravity;
+        y+=velocity;
+
+        ctx.font="40px Arial";
+        ctx.fillText("🦅",60,y);
+
+        pipes.forEach(pipe=>{
+            pipe.x-=speed;
+
+            ctx.fillStyle=isBoss?"red":"#4a2f00";
+            ctx.fillRect(pipe.x,0,60,pipe.top);
+            ctx.fillRect(pipe.x,pipe.top+pipe.gap,60,500);
+
+            if(!pipe.passed && pipe.x<60){
+                score++;
+                pipe.passed=true;
+            }
+
+            if(60+30>pipe.x && 60<pipe.x+60){
+                if(y<pipe.top || y>pipe.top+pipe.gap){
+                    lives--;
+                    y=250; velocity=0; pipes=[];
+                }
+            }
+        });
+
+        ctx.fillStyle="black";
+        ctx.fillText("Lives:"+lives,10,20);
+        ctx.fillText("Score:"+score,300,20);
+
+        if(lives<=0){
+            clearInterval(pipeInterval);
+            document.removeEventListener("click",flap);
+            document.removeEventListener("touchstart",flap);
+
+            if(score>=10){
+                bonusActive=true;
+                alert("🔥 Bonus Mode Activated! Double points!");
+            }
+
+            setTimeout(()=>{
+                document.getElementById("miniGameScreen").classList.add("hidden");
+                document.getElementById("gameScreen").classList.remove("hidden");
+            },1200);
+            return;
+        }
+
+        requestAnimationFrame(loop);
+    }
+
+    loop();
+}
+
+/* ================= INIT ================= */
+
 loadProgress();
 displayMedals();
 
 </script>
-    
+
 </body>
 </html>
