Fix canvas element duplication in mini game

--- a/math-multiplication.html
+++ b/math-multiplication.html
@@ -101,7 +101,7 @@ canvas{
 <!-- MINI GAME -->
 <div class="screen hidden" id="miniGameScreen">
 <h2>🦅 Eagle Challenge!</h2>
-<canvas id="flappyCanvas" width="400" height="500"></canvas>
+<canvas id="flappyCanvas"></canvas>
 </div>
 
 <script>
