--- a/math-multiplication.html
+++ b/math-multiplication.html
@@ -171,7 +171,7 @@ function buildLevels(){
         container.appendChild(btn);
     }
 }
-buildLevels();
+
 
 function startGame(level){
     currentLevel=level;
@@ -420,8 +420,14 @@ function addScoreToLeaderboard(score){
 
 
 /* ================= INIT ================= */
+/* ================= INIT ================= */
 
-loadProgress();
-displayMedals();
-loadLeaderboard();
-updateLeaderboardDisplay();
+document.addEventListener("DOMContentLoaded", function(){
+
+    buildLevels();
+    loadProgress();
+    displayMedals();
+    loadLeaderboard();
+    updateLeaderboardDisplay();
+
+});
